[tool.poetry]
name = "fastapi-htmx"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.39"
Jinja2 = "^3.1.2"
python-multipart = "^0.0.5"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
