[tool.poetry]
name = "fastapi-htmx"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10"
fastapi = "^0.78.0"
Jinja2 = "^3.1.2"
python-multipart = "^0.0.5"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
tortoise-orm = "^0.19.1"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = {version = "^22.6.0", allow-prereleases = true}
playwright = "^1.23.0"
pytest-playwright = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
